--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+# Crash
+dependencies:
+  firebase_core: ^2.0.0
+  firebase_crashlytics: ^3.0.0
+
   # UI & Design
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
