--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -50,3 +50,17 @@ workflows:
 
     artifacts:
       - build/ios/ipa/*.ipa
+
+publishing:
+  scripts:
+    - name: Upload dSYMs to Firebase
+      script: | 
+        # Find the dSYM files in the build artifacts
+        dsymPath=$(find $CM_BUILD_DIR/build/ios/archive/Runner.xcarchive/dSYMs -name "Runner.app.dSYM" | head -1)
+        if [[ -z "$dsymPath" ]]; then
+          echo "No dSYM found"
+        else
+          # Run the Firebase upload script (automatically included in pods)
+          $CM_BUILD_DIR/ios/Pods/FirebaseCrashlytics/upload-symbols --build-phase --validate -ai 1:1091304297452:ios:7e5f2b7c24490690ae66c9
+ -- $dsymPath
+        fi
