--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,6 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-# Crash
-dependencies:
-  firebase_core: ^latest_version
-  firebase_crashlytics: ^latest_version
-
   # UI & Design
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
@@ -50,10 +45,11 @@ dependencies:
   # Push Notifications
   onesignal_flutter: ^5.3.5
   
-  # Firebase (Synchronized versions to fix the error)
+  # Firebase (Synchronized versions and crash to fix the error)
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3   # Changed from 5.3.0 to match core 4.3.0
   google_sign_in: ^6.2.1
+  firebase_crashlytics: ^latest_version
 
   # Payment Gateways
   # Pinned to 11.5.0 because 12.x requires Dart 3.8+ (You are on 3.5.3)
