--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3   # Changed from 5.3.0 to match core 4.3.0
   google_sign_in: ^6.2.1
-  firebase_crashlytics: ^latest_version
+  firebase_crashlytics: ^4.3.10
 
   # Payment Gateways
   # Pinned to 11.5.0 because 12.x requires Dart 3.8+ (You are on 3.5.3)
