--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,9 +30,6 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  
-  # Ensure OneSignal is linked correctly
-  pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0.0'
 
   target 'RunnerTests' do
     inherit! :search_paths
@@ -44,17 +41,14 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     
     target.build_configurations.each do |config|
-      # FIX 1: Bypass Swift 6 spacing errors (Required for flutter_sslcommerz)
+      # Fix for Swift versioning and spacing errors
       config.build_settings['SWIFT_VERSION'] = '5.0'
       
-      # FIX 2: Set Deployment Target to 15.0 for Firebase 2026
+      # Set Deployment Target to 15.0
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
       
-      # FIX 3: Prevent PhaseScriptExecution failures on Codemagic/Xcode 16+
+      # Prevent PhaseScriptExecution failures
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
-      
-      # FIX 4: Architecture cleanup
-      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
     end
   end
 end
