--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,7 +30,7 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-
+  
   target 'RunnerTests' do
     inherit! :search_paths
   end
@@ -41,14 +41,30 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     
     target.build_configurations.each do |config|
-      # Fix for Swift versioning and spacing errors
+      # Swift version
       config.build_settings['SWIFT_VERSION'] = '5.0'
       
-      # Set Deployment Target to 15.0
+      # iOS Deployment Target
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
       
-      # Prevent PhaseScriptExecution failures
+      # Disable script sandboxing (prevents build failures)
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
+      
+      # 🔥 CRITICAL FIX: Xcode 15+ compatibility for Firebase
+      # This fixes the DT_TOOLCHAIN_DIR error that causes crashes
+      xcconfig_path = config.base_configuration_reference.real_path
+      if xcconfig_path && File.exist?(xcconfig_path)
+        xcconfig = File.read(xcconfig_path)
+        xcconfig_mod = xcconfig.gsub(/DT_TOOLCHAIN_DIR/, "TOOLCHAIN_DIR")
+        File.open(xcconfig_path, "w") { |file| file << xcconfig_mod }
+      end
+      
+      # Disable Bitcode (deprecated by Apple)
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+      
+      # 🔥 Fix for Firebase and other pods on Xcode 15+
+      config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
     end
   end
 end
