--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,3 @@
-name: maanstore
-description: Kids brand.
-publish_to: 'none'
-
-version: 1.0.0+6
-
-environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: '>=3.24.4'
-
 dependencies:
   flutter:
     sdk: flutter
@@ -36,7 +26,7 @@ dependencies:
   # Core Services
   dio: ^5.7.0
   http: ^1.2.2
-  intl: ^0.19.0
+  intl: ^0.20.0  # ✅ CHANGED from ^0.19.0 to ^0.20.0
   shared_preferences: ^2.3.2
   flutter_riverpod: ^2.5.3
   provider: ^6.1.2
@@ -45,7 +35,7 @@ dependencies:
   # Push Notifications
   onesignal_flutter: ^5.2.5
   
-  # Firebase (Synchronized versions)
+  # Firebase (Compatible versions for Dart 3.0-4.0)
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
@@ -53,9 +43,6 @@ dependencies:
 
   # Payment Gateways
   flutter_stripe: ^11.1.0
-  flutter_paypal: ^0.2.1
-  flutter_tap_payment: ^0.2.1
-  flutter_sslcommerz: ^2.2.2-nullsafety.0
   razorpay_flutter: ^1.3.7
 
   # Utils & Media
