--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   nb_utils: ^7.0.3
   font_awesome_flutter: ^10.7.0
   iconly: ^1.0.1
-  syncfusion_flutter_sliders: ^27.1.48
+  flutter_xlider: ^3.5.0  # FREE ALTERNATIVE to Syncfusion
   carousel_slider: ^5.0.0
   readmore: ^3.0.0
   flutter_slidable: ^3.1.1
