--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: maanstore
 description: Kids brand.
 publish_to: 'none'
@@ -5,7 +6,8 @@ publish_to: 'none'
 version: 1.0.0+6
 
 environment:
-  sdk: '^3.0.0'
+  sdk: ^3.5.3
+  flutter: 3.24.4
 
 dependencies:
   flutter:
@@ -17,14 +19,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   percent_indicator: ^4.2.3
-  flutter_feather_icons: ^2.0.0+1
-  nb_utils: ^7.0.3
+  flutter_feather_icons: ^2.0.0
+  nb_utils: ^7.0.5
   font_awesome_flutter: ^10.7.0
   iconly: ^1.0.1
-  flutter_xlider: ^3.5.0  # FREE ALTERNATIVE to Syncfusion
+  syncfusion_flutter_sliders: ^31.2.15 # Ensure this matches your Syncfusion license
   carousel_slider: ^5.0.0
   readmore: ^3.0.0
-  flutter_slidable: ^3.1.1
+  flutter_slidable: ^4.0.3
   timeline_tile: ^2.0.0
   shimmer: ^3.0.0
   blurrycontainer: ^2.1.0
@@ -35,39 +37,43 @@ dependencies:
   # Core Services
   dio: ^5.7.0
   http: ^1.2.2
-  intl: ^0.20.0
+  intl: ^0.20.2
   shared_preferences: ^2.3.2
   flutter_riverpod: ^2.5.3
   provider: ^6.1.2
-  internet_connection_checker_plus: ^2.5.2
+  internet_connection_checker: ^3.0.1
 
   # Push Notifications
-  onesignal_flutter: ^5.2.5
+  onesignal_flutter: ^5.3.5
   
-  # Firebase (Compatible versions)
-  firebase_core: ^3.6.0
-  firebase_auth: ^5.3.1
+  # Firebase (Synchronized versions and crash to fix the error)
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3   # Changed from 5.3.0 to match core 4.3.0
   google_sign_in: ^6.2.1
-  firebase_crashlytics: ^4.1.3
+  firebase_crashlytics: ^5.0.6
 
   # Payment Gateways
-  flutter_stripe: ^11.1.0
-  razorpay_flutter: ^1.3.7
+  # Pinned to 11.5.0 because 12.x requires Dart 3.8+ (You are on 3.5.3)
+  flutter_stripe: ^11.5.0 
+  flutter_paypal: ^0.2.1
+  flutter_tap_payment: ^0.2.1
+  flutter_sslcommerz: ^3.0.1
+  razorpay_flutter: ^1.3.3
 
   # Utils & Media
   flutter_easyloading: ^3.0.5
   flutter_countdown_timer: ^4.1.0
-  webview_flutter: ^4.9.0
-  share_plus: ^10.0.2
+  webview_flutter: ^4.0.0
+  share_plus: ^12.0.1
   flag: ^7.0.0
-  flutter_sound: ^9.11.3
-  image_picker: ^1.1.2
+  flutter_sound: ^9.16.3
+  image_picker: ^1.0.7
   pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0 # Changed from 6.0.0 to match Dart 3.5.3
 
 flutter:
   uses-material-design: true
