--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,130 +3,64 @@ workflows:
     name: iOS AdHoc IPA (Real Device Testing)
     max_build_duration: 60
     instance_type: mac_mini_m2
-    
+
     environment:
       flutter: stable
       xcode: latest
       cocoapods: default
-      
-      vars:
-        BUNDLE_ID: "com.totsparis"
-      
-      ios_signing:
-        distribution_type: adhoc
-        bundle_identifier: com.totsparis
-    
+
     scripts:
       - name: Initialize keychain
         script: |
           keychain initialize
-      
+
+      # 🔥 CREATE FIREBASE PLIST (CRITICAL)
       - name: Create GoogleService-Info.plist
         script: |
-          if [ -z "$IOS_FIREBASE_SECRET" ]; then
-            echo "❌ ERROR: IOS_FIREBASE_SECRET not set!"
-            exit 1
-          fi
           echo "$IOS_FIREBASE_SECRET" > ios/Runner/GoogleService-Info.plist
-          echo "✅ GoogleService-Info.plist created"
-      
+
+      # 🔥 FETCH AD-HOC SIGNING (NOT APP STORE)
       - name: Fetch AdHoc signing files
         script: |
           app-store-connect fetch-signing-files $(xcode-project detect-bundle-id) \
             --platform IOS \
             --type IOS_ADHOC \
             --create
-      
+
       - name: Add certificates
         script: |
           keychain add-certificates
-      
+
       - name: Apply provisioning profiles
         script: |
           xcode-project use-profiles
-      
-      - name: Deep clean project
-        script: |
-          echo "🧹 Deep cleaning..."
-          flutter clean
-          rm -rf build/ .dart_tool/ ios/Pods ios/Podfile.lock ios/.symlinks
-          echo "✅ Clean completed"
-      
+
       - name: Install dependencies
         script: |
-          echo "📦 Getting dependencies..."
+          flutter clean
           flutter pub get
           cd ios
           pod install --repo-update
           cd ..
-          echo "✅ Dependencies installed"
-      
-      # 🔥 NEW: Check for Dart compilation errors BEFORE building
-      - name: Pre-build validation
+
+      # ✅ BUILD AD-HOC IPA
+      - name: Build IPA (Release / AdHoc)
         script: |
-          echo "🔍 Analyzing Dart code..."
-          flutter analyze 2>&1 | tee analyze.log
-          
-          if grep -q "error •" analyze.log; then
-            echo "❌ Dart analysis found errors!"
-            cat analyze.log
-            exit 1
-          fi
-          
-          echo "✅ No Dart errors found"
-      
-      # 🔥 NEW: Build in steps to expose the actual error
-      - name: Build iOS (Step-by-step)
-        script: |
-          set -e  # Exit on any error
-          set -x  # Print each command
-          
-          echo "🔨 Step 1: Build Flutter bundle..."
-          flutter build ios-framework --release --output=build/ios/framework
-          
-          echo "🔨 Step 2: Build iOS app bundle..."
-          flutter build ios --release --no-codesign --verbose
-          
-          echo "🔨 Step 3: Archive and export IPA..."
-          cd ios
-          
-          # Create archive
-          xcodebuild -workspace Runner.xcworkspace \
-            -scheme Runner \
-            -configuration Release \
-            -archivePath $PWD/build/Runner.xcarchive \
-            archive \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO \
-            | tee xcodebuild.log
-          
-          # Check if archive was created
-          if [ ! -d "$PWD/build/Runner.xcarchive" ]; then
-            echo "❌ Archive creation failed!"
-            grep "error:" xcodebuild.log || grep "fatal error:" xcodebuild.log || cat xcodebuild.log
-            exit 1
-          fi
-          
-          cd ..
-          
-          # Re-sign and create IPA
-          flutter build ipa --release --export-options-plist=/Users/builder/export_options.plist
-          
-          echo "✅ IPA built successfully"
-          ls -lh build/ios/ipa/
-    
+          flutter build ipa --release
+
     artifacts:
       - build/ios/ipa/*.ipa
-      - "*.log"  # Capture all log files for debugging
-    
-    publishing:
-      scripts:
-        - name: Upload dSYMs to Firebase
-          script: |
-            dsymPath=$(find $CM_BUILD_DIR/build/ios/archive/Runner.xcarchive/dSYMs -name "*.dSYM" | head -1)
-            if [[ -n "$dsymPath" ]] && [ -f "$CM_BUILD_DIR/ios/Pods/FirebaseCrashlytics/upload-symbols" ]; then
-              $CM_BUILD_DIR/ios/Pods/FirebaseCrashlytics/upload-symbols \
-                -gsp $CM_BUILD_DIR/ios/Runner/GoogleService-Info.plist \
-                -p ios "$dsymPath"
-            fi
+
+publishing:
+  scripts:
+    - name: Upload dSYMs to Firebase
+      script: | 
+        # Find the dSYM files in the build artifacts
+        dsymPath=$(find $CM_BUILD_DIR/build/ios/archive/Runner.xcarchive/dSYMs -name "Runner.app.dSYM" | head -1)
+        if [[ -z "$dsymPath" ]]; then
+          echo "No dSYM found"
+        else
+          # Run the Firebase upload script (automatically included in pods)
+          $CM_BUILD_DIR/ios/Pods/FirebaseCrashlytics/upload-symbols --build-phase --validate -ai 1:1091304297452:ios:7e5f2b7c24490690ae66c9
+ -- $dsymPath
+        fi
