--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,12 +26,13 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Force static linkage to prevent dyld boot crashes
+  # CRITICAL FIX: Use static linkage to prevent dyld boot crashes
   use_frameworks! :linkage => :static
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   
+  # Ensure OneSignal is linked correctly
   pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0.0'
 
   target 'RunnerTests' do
@@ -44,9 +45,16 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     
     target.build_configurations.each do |config|
+      # Fix for Swift 6 compiler spacing errors
       config.build_settings['SWIFT_VERSION'] = '5.0'
+      
+      # Force iOS 15.0 to satisfy modern SDK requirements
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+      
+      # Fix for Codemagic/Xcode 16 sandboxing
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
+      
+      # Clean up architectures
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
     end
   end
