--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,7 @@
-platform :ios, '15.0'
+# Uncomment this line to define a global platform for your project
+# platform :ios, '12.0'
 
+# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
@@ -26,15 +28,10 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # CRITICAL FIX: Use static linkage to prevent dyld boot crashes
-  use_frameworks! :linkage => :static
+  use_frameworks!
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  
-  # Ensure OneSignal is linked correctly
-  pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0.0'
-
   target 'RunnerTests' do
     inherit! :search_paths
   end
@@ -43,19 +40,5 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
-    
-    target.build_configurations.each do |config|
-      # Fix for Swift 6 compiler spacing errors
-      config.build_settings['SWIFT_VERSION'] = '5.0'
-      
-      # Force iOS 15.0 to satisfy modern SDK requirements
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
-      
-      # Fix for Codemagic/Xcode 16 sandboxing
-      config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
-      
-      # Clean up architectures
-      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
-    end
   end
 end
