--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,6 @@
-# Uncomment this line to define a global platform for your project
+# Set the source to the CDN to ensure we get the latest specs without a full repo update
+source 'https://cdn.cocoapods.org/'
+
 platform :ios, '12.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
@@ -45,7 +47,6 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     
-    # Ensure deployment target is high enough for the pods
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
     end
